# midnight_garage

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  IDEAS.md  TODO.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-push
docs/: economy-v0.md  playtest-notes-2026-07-10.md  playtest-notes-2026-07-11.md  playtest-notes-2026-07-22-long-run.md  playtest-notes-2026-07-22.md
docs/design/: art-catalogue.md  art-direction.md  auction-guarantors.md  car-spec-arc.md  component-hierarchy-spec.md  diagnosis-spec.md  drive-mode-spec.md  economy-bible.md  economy-legibility.md  facilities-bays.md  failure-map.generated.md  failure-map.html  failure-map.md  gdd-amendment-progression.md  live-auction.md  midgame-decision-brief.md  midnight-garage-gdd.md  midnight-garage-roadmap.md  midnight-garage-roster.md  part-sprite-placeholders.md  progression-bible.md  progression-map.md  repair-replace-progression.md  selling-rework.md  skill-progression.md  story-builds-spec.md  tooling-system.md  workshop-rework.md
docs/playtest_notes/: playtest-notes-2026-07-10.md  playtest-notes-2026-07-13-pass2.md  playtest-notes-2026-07-13.md  playtest-notes-2026-07-14-pass2.md  playtest-notes-2026-07-14.md  playtest-notes-2026-07-15.md  playtest-notes-2026-07-16.md  playtest-notes-2026-07-18.md  playtest-notes-2026-07-19.md  (+1 more)
scripts/: generateFailureMap.cjs
tools/balance/: pyproject.toml  report.md
tools/balance/src/balance/: __init__.py  cli.py  data.py  invariants.py  report.py
(+128 files in other folders)
