[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "midnight-garage-balance"
version = "0.0.1"
description = "Balance harness CLI: reads headless-sim parquet runs, renders balance reports, enforces pacing invariants (wired for real in Sprint 3)."
requires-python = ">=3.11"
dependencies = ["polars>=1.0"]

[project.scripts]
balance = "balance.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
